products/data-cloud/planes/action/k8s/multi-region/eastus/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aep-service-manager
spec:
  template:
    metadata:
      labels:
        topology.kubernetes.io/region: eastus
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: aep-service-manager
      containers:
        - name: service-manager
